[package]
name = "revproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.40"
fast-socks5 = "0.10.0"
maud = { git = "https://github.com/arnu515/maud-salvo" }
salvo = { version = "0.78.0", features = ["force-https", "quinn", "rustls"] }
tokio = { version = "1.44.2", features = ["io-util", "net", "time", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "fmt", "json"] }
